--- a/src/index.html
+++ b/src/index.html
@@ -80,7 +80,7 @@
         <legend>
         An interesting fact about you!
         </legend>
-        <div class="lox">
+        <div class="xxx">
           <label for="radio"> Do you love cats? 
           </label>
           <input 
